    cnauroth)

    HADOOP-9707. Fix register lists for crc32c inline assembly. (todd via
    kihwal)

    HADOOP-9738. TestDistCh fails. (jing9 via kihwal)

    HADOOP-9759. Add support for NativeCodeLoader#getLibraryName on Windows.
    (Chuan Liu via cnauroth)

    HADOOP-9773. TestLightWeightCache should not set size limit to zero when
    testing it.  (szetszwo)

  BREAKDOWN OF HADOOP-8562 SUBTASKS AND RELATED JIRAS

    HADOOP-8924. Hadoop Common creating package-info.java must not depend on
    sh. (Chris Nauroth via suresh)

    HADOOP-8945. Merge winutils from branch-1-win to branch-trunk-win.
    (Bikas Saha, Chuan Liu, Giridharan Kesavan, Ivan Mitic, and Steve Maine
    ported by Chris Nauroth via suresh)

    HADOOP-8946. winutils: compile codebase during Maven build on 
    branch-trunk-win. (Chris Nauroth via suresh)

    HADOOP-8947. Merge FileUtil and Shell changes from branch-1-win to 
    branch-trunk-win to enable initial test pass. (Raja Aluri, Davio Lao, 
    Sumadhur Reddy Bolli, Ahmed El Baz, Kanna Karanam, Chuan Liu, 
    Ivan Mitic, Chris Nauroth, and Bikas Saha via suresh)

    HADOOP-8954. "stat" executable not found on Windows. (Bikas Saha, Ivan Mitic
    ported by Chris Narouth via suresh)

    HADOOP-8959. TestUserGroupInformation fails on Windows due to "id" executable
    not found. (Bikas Saha, Ivan Mitic, ported by Chris Narouth via suresh)

    HADOOP-8955. "chmod" executable not found on Windows.
    (Chris Nauroth via suresh)

    HADOOP-8960. TestMetricsServlet fails on Windows. (Ivan Mitic via suresh)

    HADOOP-8961. GenericOptionsParser URI parsing failure on Windows.
    (Ivan Mitic via suresh)

    HADOOP-8949. Remove FileUtil.CygPathCommand dead code. (Chris Nauroth via 
    suresh)

    HADOOP-8956. FileSystem.primitiveMkdir failures on Windows cause multiple
    test suites to fail. (Chris Nauroth via suresh)

    HADOOP-8978. TestTrash fails on Windows. (Chris Nauroth via suresh)
