@@ -349,6 +349,9 @@ Release 2.1.0-beta - 2013-07-02
     HADOOP-9773. TestLightWeightCache should not set size limit to zero when
     testing it.  (szetszwo)
 
+    HADOOP-9507. LocalFileSystem rename() is broken in some cases when
+    destination exists. (cnauroth)
+
   BREAKDOWN OF HADOOP-8562 SUBTASKS AND RELATED JIRAS
 
     HADOOP-8924. Hadoop Common creating package-info.java must not depend on
